--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@gorhom/bottom-sheet": "^5.2.8",
     "@pietile-native-kit/keyboard-aware-scrollview": "^1.5.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
@@ -20,6 +21,7 @@
     "@react-navigation/native-stack": "^7.11.0",
     "expo": "^54.0.0",
     "expo-auth-session": "^7.0.10",
+    "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.9",
     "expo-crypto": "^15.0.8",
     "expo-dev-client": "~6.0.20",
@@ -40,6 +42,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-css-interop": "^0.2.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
     "react-native-otp-inputs": "^7.4.0",
