--- a/app.json
+++ b/app.json
@@ -3,16 +3,27 @@
     "name": "fitfob_owner",
     "slug": "fitFob_owner",
     "version": "1.0.0",
-    "scheme": ["fitfob_owner", "fb2349725998870415"],
+    "scheme": [
+      "fitfob_owner",
+      "fb2349725998870415"
+    ],
     "facebookAppId": "2349725998870415",
     "facebookDisplayName": "fitfob_owner",
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "@react-native-community/datetimepicker"
+    ],
     "experiments": {
       "typedRoutes": true,
       "tsconfigPaths": true
@@ -24,13 +35,15 @@
       "image": "./assets/splash.png",
       "resizeMode": "contain"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.xyzstudio.fitfob",
       "googleServicesFile": "./GoogleService-Info.plist",
       "config": {
-        "googleMapsApiKey": "TERI_GOOGLE_MAPS_KEY_YAHAN_DAAL" 
+        "googleMapsApiKey": "TERI_GOOGLE_MAPS_KEY_YAHAN_DAAL"
       }
     },
     "android": {
@@ -41,7 +54,7 @@
       "googleServicesFile": "./google-services.json",
       "config": {
         "googleMaps": {
-          "apiKey": "TERI_GOOGLE_MAPS_KEY_YAHAN_DAAL" 
+          "apiKey": "TERI_GOOGLE_MAPS_KEY_YAHAN_DAAL"
         }
       }
     }
