--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.8",
+    "@hookform/resolvers": "^5.2.2",
     "@pietile-native-kit/keyboard-aware-scrollview": "^1.5.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
+    "@tanstack/react-query": "^5.90.21",
+    "axios": "^1.13.5",
     "expo": "^54.0.0",
     "expo-auth-session": "^7.0.10",
     "expo-camera": "~17.0.10",
@@ -43,6 +46,7 @@
     "nativewind": "latest",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.71.1",
     "react-native": "0.81.5",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-css-interop": "^0.2.1",
@@ -56,6 +60,7 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
+    "zod": "^4.3.6",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
