--- a/app.json
+++ b/app.json
@@ -47,6 +47,7 @@
       }
     },
     "android": {
+      "softwareKeyboardLayoutMode": "pan",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png"
       },
