--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "zod": "^4.3.6",
-    "zustand": "^4.5.1"
+    "zustand": "^4.5.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
