feat: Enhance OnBoarding process with club category selection and document upload functionality
- Added club category selection in OnBoarding3 with modal for options.
- Integrated user detail hook for fetching and submitting user data.
- Updated OnBoarding4 to handle document scanning and uploading with improved UI.
- Implemented API calls for uploading government documents and handling responses.
- Refactored OnBoarding4_List to display uploaded documents dynamically from user data.
- Added error handling and success notifications for document uploads.

--- a/app.json
+++ b/app.json
@@ -43,7 +43,7 @@
       "bundleIdentifier": "com.xyzstudio.fitfob",
       "googleServicesFile": "./GoogleService-Info.plist",
       "config": {
-        "googleMapsApiKey": ""
+        "googleMapsApiKey": "AIzaSyB7liTs6ffq-vFE9VZH5rjbQ_ttSSFSb4o"
       }
     },
     "android": {
